some more styling
Signed-off-by: Jonas Keidel <jonas@jonas-keidel.de>

--- a/index.html
+++ b/index.html
@@ -13,8 +13,20 @@
 </head>
 
 <body>
-  <div id="banner">
+  <div class="section" id="first">
 
+  </div>
+  <div class="section" id="infos">
+    <div class="block large_text">vom 08. bis 10.09.2017</div>
+    <br />
+    <div class="block larger_text">Neue Location!</div>
+    <br />
+    <div class="block large_text">
+      Fliegerhalle Thierfeld
+      <span>
+        1. Drachenfliegerclub Sachsen e.V., Katzenstr. 14, 08118 Hartenstein OT Thierfeld
+      </span>
+    </div>
   </div>
 </body>
 </html>
