Jugendtreffen instead of Jugendtage
Signed-off-by: joconcepts <jonas@jonas-keidel.de>

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 
 <head>
-  <title>Born to fly - Thierfelder Jugendtage 2017</title>
+  <title>Born to fly - Thierfelder Jugendtreffen 2017</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="Jonas Keidel" />
-  <meta name="description" content="Thierfelder Jugendtage" />
+  <meta name="description" content="Thierfelder Jugendtreffen" />
   <meta name="robots" content="index" />
   <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
   <link href='css/style.css' rel='stylesheet' type='text/css'>
