--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       </span>
     </div>
     <br />
+    <div class="block text medium bg-black amatic">
+      <b>Referenten:</b><br />
+      Michael Wesner & Philipp Kruse
+    </div>
+    <br />
     <div class="block text medium bg-black amatic">weitere Infos folgen bald!</div>
   </div>
 </body>
