add referent with description and picture
Signed-off-by: joconcepts <jonas@jonas-keidel.de>

--- a/index.html
+++ b/index.html
@@ -43,12 +43,43 @@
       </span>
     </div>
     <br />
-    <div class="block text medium bg-black amatic">
+    <div class="block text medium bg-black">
       <b>Referenten:</b><br />
-      Michael Wesner & Philipp Kruse
+      <div class="referent">
+        <div class="referent_left">
+          <img src="img/referenten/kruse_kleiner.jpg" alt="Philipp Kruse" />
+        </div>
+        <div class="referent_right">
+          <b class="text amatic">Michael Wesner</b><br />
+          <span class="small">
+            Ist 37 Jahre, Pastor (ICF Paderborn) und Lehrer (Sport / Geschichte),
+            verheiratet mit Beate (seit 13 Jahren), mit ihr hat er vier gemeinsame
+            Kinder (8 bis 2 Jahre). <br/>
+            Sein Lebensmotto - grenzenlos glauben, bedingungslos lieben, selbstlos
+            leiten, differenziert denken, leidenschaftlich leben<br /><br />
+            Er liebt die Gemeinde Jesus Christi, große Events und gemeinsames Gebet, Laufen gehen, Guten Whisky, Ribeye Steak.
+          </span>
+        </div>
+      </div>
+      <div class="referent">
+        <div class="referent_left">
+          <img src="img/referenten/wesner_kleiner.jpg" alt="Philipp Kruse" />
+        </div>
+        <div class="referent_right">
+          <b class="text amatic">Philipp Kruse</b><br />
+          <span class="small">
+            Philipp Kruse (Jahrgang `84) ist verheiratet mit Sarah.
+            Er ist Jugendreferent im CVJM Lemgo und Leiter von „Das Bibel Projekt“ in Deutschland.
+            Er studierte an der Universität Bielefeld und an der Bibelschule Brake.
+            Sein Herz brennt für Jugendarbeit und er liebt es junge Menschen mit Jesus zu verbinden.
+            In seiner Freizeit findet man ihn entweder im Stadion von Arminia Bielefeld oder auf Skiern in den österreichischen Bergen.
+          </span>
+        </div>
+      </div>
     </div>
-    <br />
-    <div class="block text medium bg-black amatic">weitere Infos folgen bald!</div>
+  </div>
+  <br />
+  <div class="block text medium bg-black amatic">weitere Infos folgen bald!</div>
   </div>
 </body>
 </html>
