--- a/index.html
+++ b/index.html
@@ -29,57 +29,48 @@
 
 <body>
   <div class="section" id="first">
+    <div id="banner"></div>
     <div id="scroll_down"><a href="javascript:$('#infos').goTo();">weiter</a></div>
   </div>
   <div class="section" id="infos">
-    <div class="block text large">08. bis 10.09.2017</div>
-    <br />
-    <div class="block text larger bg-black amatic">Neue Location!</div>
-    <br />
-    <div class="block text large">
+    <h1 class="text white">08. bis 10.09.2017</h1>
+    <div id="where">
+      <h2 class="text orange">Neue Location!</h2>
       Fliegerhalle Thierfeld
       <span class="small">
         1. Drachenfliegerclub Sachsen e.V., Katzenstr. 14, 08118 Hartenstein OT Thierfeld
       </span>
     </div>
-    <br />
-    <div class="block text medium bg-black">
-      <b>Referenten:</b><br />
-      <div class="referent">
-        <div class="referent_left">
-          <img src="img/referenten/kruse_kleiner.jpg" alt="Philipp Kruse" />
-        </div>
-        <div class="referent_right">
-          <b class="text amatic">Michael Wesner</b><br />
-          <span class="small">
-            Ist 37 Jahre, Pastor (ICF Paderborn) und Lehrer (Sport / Geschichte),
-            verheiratet mit Beate (seit 13 Jahren), mit ihr hat er vier gemeinsame
-            Kinder (8 bis 2 Jahre). <br/>
-            Sein Lebensmotto - grenzenlos glauben, bedingungslos lieben, selbstlos
-            leiten, differenziert denken, leidenschaftlich leben<br /><br />
-            Er liebt die Gemeinde Jesus Christi, große Events und gemeinsames Gebet, Laufen gehen, Guten Whisky, Ribeye Steak.
-          </span>
-        </div>
+  </div>
+  <div class="section" id="referenten">
+    <h1 class="text white">Referenten</h1>
+    <div class="referent">
+      <div class="referent_left">
+        <img src="img/referenten/kruse_kleiner.jpg" alt="Philipp Kruse" />
       </div>
-      <div class="referent">
-        <div class="referent_left">
-          <img src="img/referenten/wesner_kleiner.jpg" alt="Philipp Kruse" />
-        </div>
-        <div class="referent_right">
-          <b class="text amatic">Philipp Kruse</b><br />
-          <span class="small">
-            Philipp Kruse (Jahrgang `84) ist verheiratet mit Sarah.
-            Er ist Jugendreferent im CVJM Lemgo und Leiter von „Das Bibel Projekt“ in Deutschland.
-            Er studierte an der Universität Bielefeld und an der Bibelschule Brake.
-            Sein Herz brennt für Jugendarbeit und er liebt es junge Menschen mit Jesus zu verbinden.
-            In seiner Freizeit findet man ihn entweder im Stadion von Arminia Bielefeld oder auf Skiern in den österreichischen Bergen.
-          </span>
-        </div>
+      <div class="referent_right">
+        <b>Michael Wesner</b><br />
+        Ist 37 Jahre, Pastor (ICF Paderborn) und Lehrer (Sport / Geschichte),
+        verheiratet mit Beate (seit 13 Jahren), mit ihr hat er vier gemeinsame
+        Kinder (8 bis 2 Jahre). <br/>
+        Sein Lebensmotto - grenzenlos glauben, bedingungslos lieben, selbstlos
+        leiten, differenziert denken, leidenschaftlich leben<br /><br />
+        Er liebt die Gemeinde Jesus Christi, große Events und gemeinsames Gebet, Laufen gehen, Guten Whisky, Ribeye Steak.
       </div>
     </div>
-  </div>
-  <br />
-  <div class="block text medium bg-black amatic">weitere Infos folgen bald!</div>
+    <div class="referent">
+      <div class="referent_left">
+        <img src="img/referenten/wesner_kleiner.jpg" alt="Philipp Kruse" />
+      </div>
+      <div class="referent_right">
+        <b>Philipp Kruse</b><br />
+        Philipp Kruse (Jahrgang `84) ist verheiratet mit Sarah.
+        Er ist Jugendreferent im CVJM Lemgo und Leiter von „Das Bibel Projekt“ in Deutschland.
+        Er studierte an der Universität Bielefeld und an der Bibelschule Brake.
+        Sein Herz brennt für Jugendarbeit und er liebt es junge Menschen mit Jesus zu verbinden.
+        In seiner Freizeit findet man ihn entweder im Stadion von Arminia Bielefeld oder auf Skiern in den österreichischen Bergen.
+      </div>
+    </div>
   </div>
 </body>
 </html>
