more improved styling
Signed-off-by: joconcepts <jonas@jonas-keidel.de>

--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
   <div class="section" id="referenten">
     <h1 class="text white">Referenten</h1>
     <div class="referent">
-      <div class="referent_left">
-        <img src="img/referenten/kruse_kleiner.jpg" alt="Philipp Kruse" />
-      </div>
+      <div class="referent_left" style="background-image: url(img/referenten/kruse_kleiner.jpg);"></div>
       <div class="referent_right">
-        <b>Michael Wesner</b><br />
+        <b>Michael Wesner</b>
         Ist 37 Jahre, Pastor (ICF Paderborn) und Lehrer (Sport / Geschichte),
         verheiratet mit Beate (seit 13 Jahren), mit ihr hat er vier gemeinsame
         Kinder (8 bis 2 Jahre). <br/>
@@ -59,11 +57,9 @@
       </div>
     </div>
     <div class="referent">
-      <div class="referent_left">
-        <img src="img/referenten/wesner_kleiner.jpg" alt="Philipp Kruse" />
-      </div>
+      <div class="referent_left" style="background-image: url(img/referenten/wesner_kleiner.jpg);"></div>
       <div class="referent_right">
-        <b>Philipp Kruse</b><br />
+        <b>Philipp Kruse</b>
         Philipp Kruse (Jahrgang `84) ist verheiratet mit Sarah.
         Er ist Jugendreferent im CVJM Lemgo und Leiter von „Das Bibel Projekt“ in Deutschland.
         Er studierte an der Universität Bielefeld und an der Bibelschule Brake.
