--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="Jonas Keidel" />
   <meta name="description" content="Thierfelder Jugendtreffen" />
+  <meta name="keywords" content="Thierfelder, Jugendtreffen, Thierfeld, Jugendtreffen">
   <meta name="robots" content="index" />
   <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
   <link href='css/style.css' rel='stylesheet' type='text/css'>
@@ -36,8 +37,8 @@
     <h1 class="text white">08. bis 10.09.2017</h1>
     <div id="where">
       <h2 class="text orange">Neue Location!</h2>
-      Fliegerhalle Thierfeld
-      <span class="small">
+      <h1>Fliegerhalle Thierfeld</h1>
+      <span class="small bg_black">
         1. Drachenfliegerclub Sachsen e.V., Katzenstr. 14, 08118 Hartenstein OT Thierfeld
       </span>
     </div>
@@ -67,6 +68,16 @@
         In seiner Freizeit findet man ihn entweder im Stadion von Arminia Bielefeld oder auf Skiern in den österreichischen Bergen.
       </div>
     </div>
+  </div>
+
+  <div id="logo"></div>
+  <div id="social">
+    <a href="https://www.instagram.com/jugendtreffen_thierfeld">
+      <img src="img/instagram.png" alt="Instagram" />
+    </a>
+    <a href="https://www.facebook.com/thierfeld.jugendtreffen">
+      <img src="img/facebook.png" alt="Facebook" />
+    </a>
   </div>
 
 <!-- Piwik -->
