--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
       </span>
     </div>
   </div>
+  <div class="section" id="news">
+    <h1 class="text white">Neuigkeiten & Infos</h1>
+    <div class="news">
+      <h3>Die Zeit rückt näher...</h3>
+      <p>
+        ...und das Jugendtreffen in der Fliegerhallte in Thierfeld nimmt immer
+        mehr Gestalt an!<br />
+        Da wir im Osten nicht die einzige Jugend sind, die Jugendtage
+        veranstaltet und es ein haufen Leute gibt, die sinnvolle Angebote haben
+        um Jugendliche in ihrer Beziehung zu unserem Vater voran zu bringen,
+        gibt es in diesem Jahr folgendes:<br /><br />
+        Am Samstagabend, den 09.09.17 hat jeder von euch die Möglichkeit Werbung
+        für seinen Jugendtag oder seine Projekte zu machen.
+      </p>
+    </div>
+    <div class="news">
+      <h3>Trailer</h3>
+      <p>
+        Die diesjährigen Trailer könnt ihr hier anschauen:<br />
+        <a href="https://www.youtube.com/watch?v=s908dOqWjzc">Trailer 1</a>
+        <a href="https://www.youtube.com/watch?v=UAsPpKplaS4">Trailer 2</a>
+      </p>
+    </div>
+    <div class="news">
+      <h3>Eintritt</h3>
+      <p>
+      Wir möchten, dass zu unserem Jugendtreffen so viele wie möglich von
+      unserem großen Gott erfahren. Deshalb soll es auch nicht am Geld
+      scheitern. Aus diesem Grund wird es in diesem Jahr eine Preisspanne geben,
+      in der ihr wählen könnt, wie viel ihr für das Wochenende bezahlen könnt
+      und was eurem Budget entspricht.<br />
+      Der Preis für das ganze Wochenende beträgt daher 30-35€.<br />
+      Die Tagespreise erfahrt ihr an der Kasse.<br />
+      Wenn ihr das Geld nicht habt, dann kommt einfach auf uns zu und meldet
+      euch im Voraus hier: +49173/3295138.<br /><br />
+      Bis dahin, wir freuen uns auf euch!
+      </p>
+    </div>
+  </div>
   <div class="section" id="referenten">
     <h1 class="text white">Referenten</h1>
     <div class="referent">
