--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
     <div class="news">
       <h3>Die Zeit rückt näher...</h3>
       <p>
-        ...und das Jugendtreffen in der Fliegerhallte in Thierfeld nimmt immer
-        mehr Gestalt an!<br />
-        Da wir im Osten nicht die einzige Jugend sind, die Jugendtage
-        veranstaltet und es ein haufen Leute gibt, die sinnvolle Angebote haben
-        um Jugendliche in ihrer Beziehung zu unserem Vater voran zu bringen,
-        gibt es in diesem Jahr folgendes:<br /><br />
-        Am Samstagabend, den 09.09.17 hat jeder von euch die Möglichkeit Werbung
-        für seinen Jugendtag oder seine Projekte zu machen.
+        ...und das Jugendtreffen in der Fliegerhalle in Thierfeld nimmt immer mehr
+        Gestalt an!<br />
+        Da wir im Osten nicht die einzige Jugend sind, die Jugendtage veranstaltet
+        und es einen Haufen Leute gibt, die sinnvolle Angebote haben um
+        Jugendliche in ihrer Beziehung zu unserem Vater voran zu bringen, gibt es
+        in diesem Jahr folgendes:<br /><br />
+        <b>
+          Am Samstagabend, den 09.09.17, hat jeder von euch die Möglichkeit,
+          Werbung für seinen Jugendtag oder seine Projekte zu machen.
+        </b>
       </p>
     </div>
     <div class="news">
