add trailer 3 and note
Signed-off-by: joconcepts <jonas@jonas-keidel.de>

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         Die diesjährigen Trailer könnt ihr hier anschauen:<br />
         <a href="https://www.youtube.com/watch?v=s908dOqWjzc">Trailer 1</a>
         <a href="https://www.youtube.com/watch?v=UAsPpKplaS4">Trailer 2</a>
+        <a href="https://www.youtube.com/watch?v=t5hKi8JbV14">Trailer 3</a>
       </p>
     </div>
     <div class="news">
@@ -81,6 +82,15 @@
       Wenn ihr das Geld nicht habt, dann kommt einfach auf uns zu und meldet
       euch im Voraus hier: +49173/3295138.<br /><br />
       Bis dahin, wir freuen uns auf euch!
+      </p>
+    </div>
+    <div class="news">
+      <h3>Hinweis</h3>
+      <p>
+      Achtung: Die meisten Aktionen des diesjährigen Jugendtreffens finden im
+      Freien statt. Wir vertrauen Gott auf gutes Wetter und haben uns auch
+      bewusst keine Schlechtwetteraktionen überlegt. Dennoch solltet ihr evlt.
+      eine dickere Jacke und nicht die neuesten Schuhe einpacken.
       </p>
     </div>
   </div>
