maybe the colon is better there
Signed-off-by: joconcepts <jonas@jonas-keidel.de>

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="news">
       <h3>Programmheft und Feedback</h3>
       <p>
-      Um zu wissen, was wann wie läuft findest du hier das Programmheft:<br />
+      Um zu wissen was wann wie läuft, findest du hier das Programmheft:<br />
       <a href="download/programmheft.pdf">Programmheft</a>
       <br />
       Damit wir die Jugendtage noch besser machen können brauchen wir deine
