--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 
 <head>
-  <title>Born to fly - Thierfelder Jugendtreffen 2017</title>
+  <title>THE REAL THING - Thierfelder Jugendtreffen 2018</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="author" content="Jonas Keidel" />
   <meta name="description" content="Thierfelder Jugendtreffen" />
   <meta name="keywords" content="Thierfelder, Jugendtreffen, Thierfeld, Jugendtreffen">
   <meta name="robots" content="index" />
-  <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
   <link href='css/style.css' rel='stylesheet' type='text/css'>
   <meta content='width=500, initial-scale=0.6, maximum-scale=0.6, minimum-scale=0.6' name='viewport'>
   <script
@@ -34,9 +33,8 @@
     <div id="scroll_down"><a href="javascript:$('#infos').goTo();">weiter</a></div>
   </div>
   <div class="section" id="infos">
-    <h1 class="text white">08. bis 10.09.2017</h1>
+    <h1 class="text white">07. bis 09.09.2018</h1>
     <div id="where">
-      <h2 class="text orange">Neue Location!</h2>
       <h1>Fliegerhalle Thierfeld</h1>
       <span class="small bg_black">
         1. Drachenfliegerclub Sachsen e.V., Katzenstr. 14, 08118 Hartenstein OT Thierfeld
@@ -45,30 +43,8 @@
   </div>
   <div class="section" id="news">
     <h1 class="text white">Neuigkeiten & Infos</h1>
-    <div class="news">
-      <h3>Die Zeit rückt näher...</h3>
-      <p>
-        ...und das Jugendtreffen in der Fliegerhalle in Thierfeld nimmt immer mehr
-        Gestalt an!<br />
-        Da wir im Osten nicht die einzige Jugend sind, die Jugendtage veranstaltet
-        und es einen Haufen Leute gibt, die sinnvolle Angebote haben um
-        Jugendliche in ihrer Beziehung zu unserem Vater voran zu bringen, gibt es
-        in diesem Jahr folgendes:<br /><br />
-        <b>
-          Am Samstagabend, den 09.09.17, hat jeder von euch die Möglichkeit,
-          Werbung für seinen Jugendtag oder seine Projekte zu machen.
-        </b>
-      </p>
-    </div>
-    <div class="news">
-      <h3>Trailer</h3>
-      <p>
-        Die diesjährigen Trailer könnt ihr hier anschauen:<br />
-        <a href="https://www.youtube.com/watch?v=s908dOqWjzc">Trailer 1</a>
-        <a href="https://www.youtube.com/watch?v=UAsPpKplaS4">Trailer 2</a>
-        <a href="https://www.youtube.com/watch?v=t5hKi8JbV14">Trailer 3</a>
-        <a href="https://www.youtube.com/watch?v=l_TsWNiDhnc">Trailer 4</a>
-      </p>
+    <div class="news flyer">
+      <img src="img/info.jpg" alt="infos" />
     </div>
     <div class="news">
       <h3>Eintritt</h3>
@@ -93,32 +69,6 @@
       bewusst keine Schlechtwetteraktionen überlegt. Dennoch solltet ihr evlt.
       eine dickere Jacke und nicht die neuesten Schuhe einpacken.
       </p>
-    </div>
-  </div>
-  <div class="section" id="referenten">
-    <h1 class="text white">Referenten</h1>
-    <div class="referent">
-      <div class="referent_left" style="background-image: url(img/referenten/kruse_kleiner.jpg);"></div>
-      <div class="referent_right">
-        <b>Michael Wesner</b>
-        Ist 37 Jahre, Pastor (ICF Paderborn) und Lehrer (Sport / Geschichte),
-        verheiratet mit Beate (seit 13 Jahren), mit ihr hat er vier gemeinsame
-        Kinder (8 bis 2 Jahre). <br/>
-        Sein Lebensmotto - grenzenlos glauben, bedingungslos lieben, selbstlos
-        leiten, differenziert denken, leidenschaftlich leben<br /><br />
-        Er liebt die Gemeinde Jesus Christi, große Events und gemeinsames Gebet, Laufen gehen, Guten Whisky, Ribeye Steak.
-      </div>
-    </div>
-    <div class="referent">
-      <div class="referent_left" style="background-image: url(img/referenten/wesner_kleiner.jpg);"></div>
-      <div class="referent_right">
-        <b>Philipp Kruse</b>
-        Philipp Kruse (Jahrgang `84) ist verheiratet mit Sarah.
-        Er ist Jugendreferent im CVJM Lemgo und Leiter von „Das Bibel Projekt“ in Deutschland.
-        Er studierte an der Universität Bielefeld und an der Bibelschule Brake.
-        Sein Herz brennt für Jugendarbeit und er liebt es junge Menschen mit Jesus zu verbinden.
-        In seiner Freizeit findet man ihn entweder im Stadion von Arminia Bielefeld oder auf Skiern in den österreichischen Bergen.
-      </div>
     </div>
   </div>
 
