--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       </p>
     </div>
   </div>
+  <div id="footer">
+    <a href="/impressum.html">Impressum/Datenschutz</a>
+  </div>
 
   <div id="logo"></div>
   <div id="social">
