--- a/index.html
+++ b/index.html
@@ -54,6 +54,86 @@
       </p>
     </div>
     <div class="news">
+      <h3>App mit weiteren Infos</h3>
+      <p>
+      	Hier könnt Ihr Euch die App für den Jugendtag herunterladen. Dort findet 
+	      ihr alle weiteren Informationen zum Ablauf oder Seminaren.<br />
+	      <br />
+	      <a href="https://apps-eu01.app-controller.net/d718ec37-ece2-443b-b5aa-3b4db2e976a0/app/index.html">Link zur App</a>
+	      <br /><br />
+        Oder einfach per QR Code: <br />
+        <img id="qr" src="img/qr.jpg" alt="QR Code" />
+      </p>
+    </div>
+    <div class="news">
+      <h3>Programm</h3>
+      <span class="programm_day">Freitag</span>
+      <ul class="programm">
+        <li>
+          <span class="programm_time">19.00</span>
+          <b>THE REAL DESIRE</b>
+        </li>
+        <li>
+          <span class="programm_time">21.00</span>
+          Late-Night-Programm
+        </li>
+      </ul>
+      <span class="programm_day">Samstag</span>
+      <ul class="programm">
+        <li>
+          <span class="programm_time">06.00</span>
+          <b>SUNRISE WORSHIP</b>
+        </li>
+        <li>
+          <span class="programm_time">09.30</span>
+          <b>THE REAL SEPARATION</b>
+        </li>
+        <li>
+          <span class="programm_time">11.30</span>
+          Mittagessen
+        </li>
+        <li>
+          <span class="programm_time">13.00</span>
+          Seminare
+        </li>
+        <li>
+          <span class="programm_time">15.00</span>
+          Kaffeetrinken
+        </li>
+        <li>
+          <span class="programm_time">16.00</span>
+          Workshops
+        </li>
+        <li>
+          <span class="programm_time">18.00</span>
+          <b>THE REAL THING</b>
+        </li>
+        <li>
+          <span class="programm_time">20.00</span>
+          Abendessen
+        </li>
+        <li>
+          <span class="programm_time">21.00</span>
+          <b>ANSPIEL</b>
+        </li>
+      </ul>
+      <span class="programm_day">Sonntag</span>
+      <ul class="programm">
+        <li>
+          <span class="programm_time">09.00</span>
+          <b>YOUR DECISION</b>
+        </li>
+        <li>
+          <span class="programm_time">10.30</span>
+          <b>WORSHIP</b>
+        </li>
+        <li>
+          <span class="programm_time">12.00</span>
+          Mittagessen
+        </li>
+      </ul>
+    </div>
+    <div class="news">
       <h3>Eintritt</h3>
       <p>
       Wir möchten, dass zu unserem Jugendtreffen so viele wie möglich von
